--- a/module3_solution/styles/styles.css
+++ b/module3_solution/styles/styles.css
@@ -5,9 +5,6 @@ input[type="text"] {
   width: 200px;
   float: left;
 }
-ul {
-  clear: both;
-}
 .narrow-button {
   float: left;
   margin-left: 10px;
@@ -52,4 +49,30 @@ ul {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
+}
+
+/*
+  MY STUFF
+*/
+
+.found-items-list {
+  /*clear: both;*/
+  list-style: none;
+  padding: 0;
+}
+
+.found-items-list li {
+  padding: 5px 0;
+}
+
+.found-items-wrapper {
+  clear: both;
+}
+
+.menu-item-name {
+  font-weight: bold;
+}
+
+.menu-item-short-name {
+  font-weight: normal;
 }
